--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ header {
 header h1 {
     margin: 0;
     font-size: 2em;
+    color: #ee5b17;
 }
 
 header input[type="text"] {
@@ -56,6 +57,7 @@ header input[type="text"] {
 .movie-card h2 {
     margin: 10px 0;
     font-size: 18px;
+    color: #ee5b17;
 }
 
 .movie-card:hover {
